--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -264,7 +264,7 @@ jobs:
 
       - name: Release info
         run: |
-          echo ${{ fromJSON(steps.release.outputs.assets) }}
+          echo ${{join(steps.release.outputs.*, '\n')}}
 
       - name: Publish (to test PyPI)
         run: |
