--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -264,7 +264,7 @@ jobs:
 
       - name: Release info
         run: |
-          echo ${{ fromJSON(steps.release.outputs.assets)[0].browser_download_url }}
+          echo "New release posted at ${{ steps.release.outputs.url}}"
 
       - name: Publish (to test PyPI)
         run: |
