--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -265,9 +265,7 @@ jobs:
       - name: Release info
         run: |
           echo "New release posted at ${{ steps.release.outputs.url }}"
-          echo "New asset 0 browser_download_url: ${{ steps.release.outputs.assets[0].browser_download_url }}"
-          echo "New asset 1 browser_download_url: ${{ steps.release.outputs.assets[1].browser_download_url }}"
-          echo "New asset 1 browser_download_url: ${{ steps.release.outputs.assets[1].name }}"
+          echo ${{ fromJSON(steps.<step-id>.outputs.assets) }}
 
       - name: Publish (to test PyPI)
         run: |
