--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -274,7 +274,7 @@ jobs:
           echo "::set-output name=binary_download_links::string1,string2"
           python -c "\
             from pathlib import Path;
-            for i in Path('release-artifacts').glob('*/*'):: print(str(i));
+            for i in Path('release-artifacts').glob('*/*'): print(str(i));
           "
           echo "https://github.com/hpcflow/hpcflow-new/releases/${{ needs.bump-version.outputs.new_tag_name }}/download/release-artifacts/hpcflow-*/*"
 
