--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -270,14 +270,19 @@ jobs:
           echo "steps.release.outputs.url: ${{ steps.release.outputs.url }}"
           echo "steps.release.outputs.id: ${{ steps.release.outputs.id }}"
           echo "steps.release.outputs.upload_url: ${{ steps.release.outputs.upload_url }}"
-          tree release-artifacts/          
-          echo "::set-output name=binary_download_links::string1,string2"
+          tree release-artifacts/
           python -c "
           from pathlib import Path;
-          for i in Path('release-artifacts').glob('*/*'):
-            print(str(i));
+          import os
+          out = []
+          for i in Path('release-artifacts').glob('*/hpcflow*'):
+            print(str(i))
+            out_i = 'https://github.com/hpcflow/hpcflow-new/releases/${{ needs.bump-version.outputs.new_tag_name }}'
+            out_i += f'/download/release-artifacts/str({i.name})'
+            out.append(out_i)            
+          os.environ['HPCFLOW_BINARY_LINKS'] = ','.join(out)
           "
-          echo "https://github.com/hpcflow/hpcflow-new/releases/${{ needs.bump-version.outputs.new_tag_name }}/download/release-artifacts/hpcflow-*/*"
+          echo "::set-output name=binary_download_links::$HPCFLOW_BINARY_LINKS"
 
       - name: Publish (to test PyPI)
         run: |
