--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -276,7 +276,8 @@ jobs:
           import os
           out_yaml = ''
           for i in Path('release-artifacts').glob('*/hpcflow*'):
-            out_yaml += '${{ needs.bump-version.outputs.new_tag_name }}: https://github.com/hpcflow/hpcflow-new/releases/${{ needs.bump-version.outputs.new_tag_name }}'
+            print(f'i: {i}')
+            out_yaml += str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/${{ needs.bump-version.outputs.new_tag_name }}'
             out_yaml += f'/download/release-artifacts/{str(i.name)}\\n'
           print(out_yaml)
           ")
@@ -294,7 +295,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          repo: hpcflow/hpcflow.github.io
+          repository: hpcflow/hpcflow.github.io
       - name: Update binary links
         run: |
           echo "${{ needs.release-github-PyPI.outputs.binary_download_links }}"
