--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -273,13 +273,10 @@ jobs:
           tree release-artifacts/
           binaryYaml=$(python3 -c "
           from pathlib import Path;
-          import os
-          out_yaml = ''
           for i in Path('release-artifacts').glob('*/hpcflow*'):
-            print(f'i: {i}')
-            out_yaml += str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/${{ needs.bump-version.outputs.new_tag_name }}'
+            out_yaml = str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/${{ needs.bump-version.outputs.new_tag_name }}'
             out_yaml += f'/download/release-artifacts/{str(i.name)}\\n'
-          print(out_yaml)
+            print(out_yaml)
           ")
           echo "::set-output name=binary_download_links::$binaryYaml"
 
