--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -278,6 +278,9 @@ jobs:
             out_yaml += f'/download/release-artifacts/{str(i.name)}\\n'
             print(out_yaml)
           ")
+          binaryYaml="${binaryYaml//'%'/'%25'}"
+          binaryYaml="${binaryYaml//$'\n'/'%0A'}"
+          binaryYaml="${binaryYaml//$'\r'/'%0D'}"
           echo "::set-output name=binary_download_links::$binaryYaml"
 
       - name: Publish (to test PyPI)
