--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -296,6 +296,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: hpcflow/hpcflow.github.io
+
+      - run: |
+          git config user.name hpcflow-actions
+          git config user.email hpcflow-actions@users.noreply.github.com
+
       - name: Update binary links
         run: |
           echo "${{ needs.release-github-PyPI.outputs.binary_download_links }}" >> _data/binaries.yml
