--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -296,6 +296,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: hpcflow/hpcflow.github.io
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # hpcflow-actions user with push permission
 
       - run: |
           git config user.name hpcflow-actions
