--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -272,11 +272,12 @@ jobs:
           echo "steps.release.outputs.upload_url: ${{ steps.release.outputs.upload_url }}"
           tree release-artifacts/
           binaryYaml=$(python3 -c "
-          from pathlib import Path;
-          for i in Path('release-artifacts').glob('*/hpcflow*'):
-            out_yaml = str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}'
-            out_yaml += f'/{str(i.name)}'
-            print(out_yaml)
+          from pathlib import Path
+          out_yaml = '${{ needs.bump-version.outputs.new_tag_name }}:\n'
+          for i in Path('release-artifacts').glob('*/hpcflow*'):            
+            out_yaml += '  ' + str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}'
+            out_yaml += f'/{str(i.name)}\n'
+          print(out_yaml)
           ")
           binaryYaml="${binaryYaml//'%'/'%25'}"
           binaryYaml="${binaryYaml//$'\n'/'%0A'}"
