--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -277,7 +277,7 @@ jobs:
           for i in Path('release-artifacts').glob('*/hpcflow*'):            
             out_yaml += '  ' + str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}'
             out_yaml += f'/{str(i.name)}\n'
-          print(out_yaml)
+          print(out_yaml + '\n')
           ")
           binaryYaml="${binaryYaml//'%'/'%25'}"
           binaryYaml="${binaryYaml//$'\n'/'%0A'}"
