--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -277,7 +277,7 @@ jobs:
           for i in Path('release-artifacts').glob('*/hpcflow*'):            
             out_yaml += '  ' + str(i.name) + ': https://github.com/hpcflow/hpcflow-new/releases/download/${{ needs.bump-version.outputs.new_tag_name }}'
             out_yaml += f'/{str(i.name)}\n'
-          print(out_yaml + '\n')
+          print(out_yaml)
           ")
           binaryYaml="${binaryYaml//'%'/'%25'}"
           binaryYaml="${binaryYaml//$'\n'/'%0A'}"
@@ -305,7 +305,7 @@ jobs:
 
       - name: Update binary links
         run: |
-          echo -e "${{ needs.release-github-PyPI.outputs.binary_download_links }}$(cat _data/binaries.yml)" > _data/binaries.yml
+          echo -e "${{ needs.release-github-PyPI.outputs.binary_download_links }}\n$(cat _data/binaries.yml)" > _data/binaries.yml
           git add .
           git commit -m "update binary download links"
           git push
