--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -148,7 +148,7 @@ jobs:
       - name: Build documentation with Sphinx
         run: |
           cd docs
-          make html
+          poetry run make html
 
       - name: Upload documentation artifact
         uses: actions/upload-artifact@v2
