--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ black = "^21.12b0"
 pyinstaller = "^4.9"
 Sphinx = "^4.4.0"
 pydata-sphinx-theme = "^0.8.0"
+sphinx-jinja = "^2.0.1"
+sphinx-copybutton = "^0.5.0"
 
 [tool.poetry.scripts]
 hpcflow = 'hpcflow.cli:cli'
