--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -290,6 +290,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.base.ref }} # otherwise we get the ref when the workflow started (missing above commit)
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
 
       - run: |
           git config user.name hpcflow-actions
