--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN || secrets.GITHUB_TOKEN }} # PAT of user (hpcflow-actions) who has permission to bypass branch protection || or standard GITHUB_TOKEN if running on an external fork (won't be able to commit fixes)
+          ref: ${{ github.head_ref || github.ref }} # checkout PR source branch (head_ref) if event is pull_request
 
       - run: |
           git config user.name hpcflow-actions
