--- a/docs/source/released_binaries.yml
+++ b/docs/source/released_binaries.yml
@@ -1,4 +1,4 @@
-hpcflow-v0.66.0-win.exe: https://github.com/hpcflow/hpcflow-new/releases/download/v0.66.0/hpcflow-v0.66.0-win.exe
-hpcflow-v0.66.0-macOS: https://github.com/hpcflow/hpcflow-new/releases/download/v0.66.0/hpcflow-v0.66.0-macOS
-hpcflow-v0.66.0-linux: https://github.com/hpcflow/hpcflow-new/releases/download/v0.66.0/hpcflow-v0.66.0-linux
+hpcflow-v0.67.0a0-macOS: https://github.com/hpcflow/hpcflow-new/releases/download/v0.67.0a0/hpcflow-v0.67.0a0-macOS
+hpcflow-v0.67.0a0-linux: https://github.com/hpcflow/hpcflow-new/releases/download/v0.67.0a0/hpcflow-v0.67.0a0-linux
+hpcflow-v0.67.0a0-win.exe: https://github.com/hpcflow/hpcflow-new/releases/download/v0.67.0a0/hpcflow-v0.67.0a0-win.exe
 
