--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,18 @@ on:
 
 jobs:
   bump-version:
-    if: github.event.pull_request.merged && ! contains(github.event.pull_request.title, '[skip deploy]')
+    if:
+      | # skip if: PR is closed without merging; '[skip deploy]' is in the PR title; or if merging any branch other than develop into main
+      ( 
+        github.event.pull_request.merged 
+        && ! contains(github.event.pull_request.title, '[skip deploy]') 
+        && (
+          github.event.pull_request.base.ref == 'develop' || (
+            github.event.pull_request.base.ref == 'main'
+            && github.event.pull_request.head.ref == 'develop'
+          )
+        )
+      )
     runs-on: ubuntu-latest
     outputs:
       new_tag_name: ${{ steps.get_new_tag.outputs.new_tag_name }}
