--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,8 +70,8 @@ jobs:
           python3 -c "
           from commitizen.bump import update_version_in_files
           update_version_in_files(
-              current_version=${{ env.cur_pre_tag }}.lstrip('v'),
-              new_version=${{ env.cur_tag }}.lstrip('v'),
+              current_version='${{ env.cur_pre_tag }}'.lstrip('v'),
+              new_version='${{ env.cur_tag }}'.lstrip('v'),
               files=['pyproject.toml', 'hpcflow/_version.py'],
           )"
           cz bump
