--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -1,5 +1,8 @@
 name: build-exes
 
+env:
+  PYTHON_VERSION_BUILD_EXES: 3.9
+
 on:
   workflow_dispatch:
 
@@ -25,7 +28,7 @@ jobs:
 
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.9
+          python-version: ${PYTHON_VERSION_BUILD_EXES}
 
       - name: Cache the virtualenv
         uses: actions/cache@v2
