build: test anchors

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,19 +4,18 @@ concurrency:
   ci-${{ format('{0}github.head_ref', 'refs/heads') || github.ref }}
 
 env:
-  RELEASE_BRANCH: main
-  PRE_RELEASE_BRANCH: develop
+  RELEASE_BRANCH: &RELEASE_BRANCH main
+  PRE_RELEASE_BRANCH: &PRE_RELEASE_BRANCH develop
   PYTHON_VERSION_PRE_COMMIT: 3.9
   PYTEST_ARGS: --verbose --exitfirst -k "not task_schema and not task_template and not resolve_elements and not input_value and not action"
 
 on:
   workflow_dispatch: # manual
   push:
-    branches-ignore:
-      ["${{ env.RELEASE_BRANCH }}", "${{ env.PRE_RELEASE_BRANCH }}"]
+    branches-ignore: [*RELEASE_BRANCH, *PRE_RELEASE_BRANCH]
   pull_request:
     types: [opened, edited, synchronize]
-    branches: ["${{ env.RELEASE_BRANCH }}", "${{ env.PRE_RELEASE_BRANCH }}"]
+    branches: [*RELEASE_BRANCH, *PRE_RELEASE_BRANCH]
 
 jobs:
   pre-commit:
