--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,18 +4,20 @@ concurrency:
   ci-${{ format('{0}github.head_ref', 'refs/heads') || github.ref }}
 
 env:
-  RELEASE_BRANCH: &RELEASE_BRANCH main
-  PRE_RELEASE_BRANCH: &PRE_RELEASE_BRANCH develop
+  RELEASE_BRANCH: main
+  PRE_RELEASE_BRANCH: develop
   PYTHON_VERSION_PRE_COMMIT: 3.9
-  PYTEST_ARGS: --verbose --exitfirst -k "not task_schema and not task_template and not resolve_elements and not input_value and not action"
+  PYTEST_ARGS: --verbose --exitfirst
+  BOT_ACCOUNT_NAME: hpcflow-actions
+  BOT_ACCOUNT_EMAIL: hpcflow-actions@users.noreply.github.com
 
 on:
   workflow_dispatch: # manual
   push:
-    branches-ignore: [*RELEASE_BRANCH, *PRE_RELEASE_BRANCH]
+    branches-ignore: [main, develop]
   pull_request:
     types: [opened, edited, synchronize]
-    branches: [*RELEASE_BRANCH, *PRE_RELEASE_BRANCH]
+    branches: [main, develop]
 
 jobs:
   pre-commit:
@@ -31,8 +33,8 @@ jobs:
           ref: ${{ github.head_ref || github.ref }}
 
       - run: |
-          git config user.name hpcflow-actions
-          git config user.email hpcflow-actions@users.noreply.github.com
+          git config user.name $BOT_ACCOUNT_NAME
+          git config user.email $BOT_ACCOUNT_EMAIL
 
       - uses: actions/setup-python@v2
         with:
