--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
       - run: |
           git config user.name $BOT_ACCOUNT_NAME
           git config user.email $BOT_ACCOUNT_EMAIL
-          echo "git config user.name: ${git config user.name}"
+          echo "git config user.name: $(git config user.name)"
 
       - uses: actions/setup-python@v2
         with:
