build: change it

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,17 +7,17 @@ env:
   RELEASE_BRANCH: main
   PRE_RELEASE_BRANCH: develop
   PYTHON_VERSION_PRE_COMMIT: 3.9
-  PYTEST_ARGS: --verbose --exitfirst
+  PYTEST_ARGS: --verbose --exitfirst -k "not task_schema and not task_template and not resolve_elements and not input_value and not action"
   BOT_ACCOUNT_NAME: hpcflow-actions
   BOT_ACCOUNT_EMAIL: hpcflow-actions@users.noreply.github.com
 
 on:
-  workflow_dispatch: # manual
+  workflow_dispatch: # manual invocation
   push:
-    branches-ignore: [main, develop]
+    branches-ignore: [main, develop] # have to manually change these
   pull_request:
     types: [opened, edited, synchronize]
-    branches: [main, develop]
+    branches: [main, develop] # have to manually change these
 
 jobs:
   pre-commit:
@@ -36,6 +36,7 @@ jobs:
           git config user.name $BOT_ACCOUNT_NAME
           git config user.email $BOT_ACCOUNT_EMAIL
           echo "git config user.name: $(git config user.name)"
+          echo "git config user.email: $(git config user.email)"
 
       - uses: actions/setup-python@v2
         with:
