--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,9 @@ jobs:
         github.event.pull_request.merged 
         && ! contains(github.event.pull_request.title, '[skip release]') 
         && (
-          github.event.pull_request.base.ref == 'develop' || (
-            github.event.pull_request.base.ref == 'main'
-            && github.event.pull_request.head.ref == 'develop'
+          github.event.pull_request.base.ref == ${{ env.PRE_RELEASE_BRANCH }} || (
+            github.event.pull_request.base.ref == ${{ env.RELEASE_BRANCH }}
+            && github.event.pull_request.head.ref == ${{ env.PRE_RELEASE_BRANCH }}
           )
         )
       )
