--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,7 @@ concurrency:
   ci-${{ format('{0}github.head_ref', 'refs/heads') || github.ref }}
 
 env:
-  RELEASE_BRANCH: main
-  PRE_RELEASE_BRANCH: develop
-  PYTHON_VERSION_PRE_COMMIT: 3.9  
-  BOT_ACCOUNT_NAME: hpcflow-actions
-  BOT_ACCOUNT_EMAIL: hpcflow-actions@users.noreply.github.com
+  PYTHON_VERSION_PRE_COMMIT: 3.9
 
 on:
   workflow_dispatch: # manual invocation
@@ -32,10 +28,8 @@ jobs:
           ref: ${{ github.head_ref || github.ref }}
 
       - run: |
-          git config user.name $BOT_ACCOUNT_NAME
-          git config user.email $BOT_ACCOUNT_EMAIL
-          echo "git config user.name: $(git config user.name)"
-          echo "git config user.email: $(git config user.email)"
+          git config user.name hpcflow-actions
+          git config user.email hpcflow-actions@users.noreply.github.com
 
       - uses: actions/setup-python@v2
         with:
@@ -46,7 +40,7 @@ jobs:
         # running twice:
         run: |
           pip install pre-commit
-          pre-commit install 
+          pre-commit install
           export SKIP=no-commit-to-branch
           pre-commit run --all-files || pre-commit run --all-files
 
