--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -304,9 +304,9 @@ jobs:
 
       - name: Publish (to test PyPI)
         run: |
-          poetry config repositories.test-pypi https://test.pypi.org/legacy/
-          poetry config pypi-token.test-pypi ${{ secrets.TEST_PYPI }}
-          poetry publish --repository test-pypi
+          poetry config repositories.pypi https://test.pypi.org/legacy/ 
+          poetry config pypi-token.pypi ${{ secrets.TEST_PYPI }}
+          poetry publish --repository pypi
 
   build-documentation:
     needs: release-github-PyPI
@@ -316,7 +316,7 @@ jobs:
         with:
           fetch-depth: 0 # get all history and tags
           ref: ${{ github.event.pull_request.base.ref }} # otherwise we get the ref when the workflow started (missing above commit)
-          token: ${{ format('secrets.{}', env.TOKEN_NAME) }}
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }}
 
       - run: |
           git config user.name hpcflow-actions
@@ -386,7 +386,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: hpcflow/hpcflow.github.io
-          token: ${{ format('secrets.{}', env.TOKEN_NAME) }}
+          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }}
 
       - run: |
           git config user.name hpcflow-actions
