build: remove pyinstaller dep

--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -43,7 +43,9 @@ jobs:
         run: poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: poetry install
+        run: |
+          poetry install --no-dev
+          poetry run pip install pyinstaller
 
       - name: Get exectuable version name
         run: |
@@ -85,7 +87,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --no-dev
+          poetry run pip install pyinstaller
 
       - name: Get exectuable version name
         run: |
@@ -94,7 +97,7 @@ jobs:
           echo "vers is: $vers"
           echo "vers=$vers" >> $GITHUB_ENV
 
-      - name: Build with pyinstaller for ${{matrix.executable_os}}
+      - name: Build with pyinstaller for CentOS
         run: poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ env.vers }}-linux --onefile
 
       - uses: actions/upload-artifact@v2
