--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Build with pyinstaller for ${{matrix.executable_os}}
         run: poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ env.vers }} --onefile
 
-      - run: tree /F /A
+      # - run: tree /F /A
 
       - name: Rename executable for ${{matrix.executable_os}}
         run: mv dist/hpcflow-${{ env.vers }}${{ matrix.executable_ext }} dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
@@ -75,12 +75,12 @@ jobs:
           path: dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}
 
       - name: Rename spec file for ${{matrix.executable_os}}
-        run: mv hpcflow.spec hpcflow-${{ matrix.executable_os }}.spec
+        run: mv hpcflow-${{ env.vers }}.spec hpcflow-${{ env.vers }}-${{ matrix.executable_os }}.spec
 
       - uses: actions/upload-artifact@v2
         with:
-          name: hpcflow${{ matrix.executable_os }}.spec
-          path: hpcflow${{ matrix.executable_os }}.spec
+          name: hpcflow-${{ env.vers }}${{ matrix.executable_os }}.spec
+          path: hpcflow-${{ env.vers }}${{ matrix.executable_os }}.spec
 
       - name: Basic executable test
         run: dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version
